@@ -819,6 +819,115 @@ stored in the args hash for that option key.  When called with two arguments,
 the second argument is assigned to the args hash under the key passed as the
 first argument.
 
+=item ask()
+
+[version 0.28]
+
+Asks the user a question and returns the answer as a string.
+
+The following is a list of arguments.  Only C<prompt> and C<default>
+are required.
+
+=over
+
+=item allow_nonoption_default
+
+Normally, if an C<options> array is present, then the value of the
+C<default> argument must exist in C<options>.  Setting
+C<allow_nonoption_default> to true allows the C<default> argument to
+be set to an arbitrary value.
+
+Default is false.
+
+=item default   [required]
+
+This is the default value that will be used if the user presses
+E<lt>enterE<gt> or if running an unattended build.
+
+The value assigned to C<default> may be different from the options
+listed in the C<options> argument.
+
+=item getopts_name
+
+The name of a command line option.  If an option with this name is
+given on the command line, the value of the option will be used as the
+answer to the prompt.
+
+=item on_validate
+
+This is a code reference that can be used to validate or modify the
+answer entered by the user.  The value the user enters will be passed
+in as the first argument, and it will also be stored in C<$_>
+variable.  Any modification to the variable C<$_> will be retained as
+the new answer.
+
+The subroutine passed to C<on_validate> must return a value to
+indicate how to proceed.
+
+If the return value is true, then the answer will be accepted as is,
+without further testing.  In particular, there will be no test to
+ensure that the answer is in the C<options> array if any where given.
+
+If the return value is false, then the answer will be rejected and a
+new answer will be requested, regardless of whether the answer exists
+in the C<options> array.
+
+If the return value is C<undef>, then the answer will be subject to
+the normal checks: if there is an C<options> array and the answer is
+one of the options, it will be accepted; if it is an open-ended query
+without an C<options> array, it will be accepted; otherwise it will be
+rejected.
+
+=item options
+
+A reference to an array containing a list of valid options.  If options
+are provided, C<ask()> will not return until a valid option is
+entered, or the C<default> is selected by pressing E<lt>enterE<gt>
+without entering a value.  Option names are case-insensitive, but the
+option returned will be normalized to the form used in the argument to
+C<options>.  It is not necessary for the user to enter the entire
+option name; C<ask()> will accept any unambiguous sequence of
+characters that will match only one option.  Eg. If the options are
+C<qw(yes no)> it will accept any of 'y', 'ye', or 'yes' to mean
+yes.  The complete option name will be returned.
+
+If no options are provided, C<ask()> will accept any response from the
+user.
+
+=item prompt   [required]
+
+This string will be displayed to the user to indicate that input is
+needed.  It should indicate the type of input required.
+
+=item show_default
+
+A boolean value that indicates whether the default value should be
+displayed as part of the prompt.  If true and if the default is a
+non-empty string, the default will be displayed at the end of the
+prompt, after the list of options if present.  It will be enclosed in
+square brackets.
+
+Default is true.
+
+=item show_options
+
+A boolean value that indicates whether the list of options should be
+displayed as part of the prompt.  If true and if C<options> contains a
+non-empty array, the list of options will be displayed at the end of
+the prompt, and before the C<default> value if it is shown.  The
+options will be separated by slashes and enclosed in parenthesis.
+
+Default is true.
+
+=back
+
+If C<ask()> detects that it is not running interactively and there
+is nothing on STDIN or if the PERL_MM_USE_DEFAULT environment variable
+is set to true, the C<default> will be used without prompting.  This
+prevents automated processes from blocking on user input.
+
+This method may be called as a class or object method.
+
 =item autosplit_file($from, $to)
 
 [version 0.28]
