@@ -473,13 +473,13 @@ sub _is_unattended {
 sub _readline {
   my $self = shift;
 
-  my $ans;
+  my $answer;
   if ( !$self->_is_unattended ) {
-    $ans = <STDIN>;
-    chomp $ans if defined $ans;
+    $answer = <STDIN>;
+    chomp $answer if defined $answer;
   }
 
-  return $ans;
+  return $answer;
 }
 
 sub prompt {
@@ -528,6 +528,144 @@ EOF
     local $|=1;
     print "Please answer 'y' or 'n'.\n";
   }
+}
+
+sub ask {
+  my $self = shift;
+  my %args = @_;
+
+  # Check argument requirements
+  croak("ask() called without a prompt message") unless $args{prompt};
+  croak("ask() called without a default value") unless exists($args{default});
+
+  # Set defaults
+  my $show_options = exists($args{show_options}) ? $args{show_options} : 1;
+  my $show_default = exists($args{show_default}) ? $args{show_default} : 1;
+
+  my $getopts_name = exists($args{getopts_name}) ? $args{getopts_name} : undef;
+
+  my $allow_nonoption_default = exists($args{allow_nonoption_default})
+      ? $args{allow_nonoption_default} : 0;
+
+  my $on_validate = ref( $args{on_validate} ) eq 'CODE'
+    ? sub {
+        my $ans_ref = shift;
+        local $_ = $$ans_ref;
+        my $ret = $args{on_validate}->($_);
+        $$ans_ref = $_;
+        return $ret;
+      }
+    : sub { return undef };
+
+
+  # Setup options & abbrevs
+  my @options = ();
+  my $disp_options = '';
+  my %abbrev_of = ();
+  my %proper_case_of = ();
+
+  if ( $args{options} && ref($args{options}) eq 'ARRAY' ) {
+    @options = @{$args{options}};
+    if ( @options ) {
+      require Text::Abbrev;
+      %abbrev_of = Text::Abbrev::abbrev(map lc, @options);
+      %proper_case_of = map { lc $_, $_ } @options;
+      $disp_options = '(' . join('/', @options) . ')';
+    }
+  }
+
+  # Validate the default
+  my $default;
+  if ( $allow_nonoption_default ||
+       !$args{options}          ||
+       grep( {$_ eq $args{default}} @options ) )
+  {
+    $default = $args{default};
+  } else {
+    croak("The 'default' argument must exist in 'options' array.");
+  }
+
+  my $disp_default = '[' . $proper_case_of{$abbrev_of{lc $default}} . ']'
+    if $default && exists($abbrev_of{lc $default});
+
+  # Format prompt
+  my $prompt = $args{prompt};
+
+  # if $prompt ends in new-line, don't insert inital space
+  my $space = sub { (substr($_[0], -1) eq "\n") ? '' : ' ' };
+
+  $prompt .= $space->($prompt) . $disp_options
+      if $disp_options && $show_options;
+
+  $prompt .= $space->($prompt) . $disp_default
+      if $disp_default && $show_default;
+
+  $prompt .= $space->($prompt);
+
+
+  local $|=1;
+
+  # Guess
+  if ( $getopts_name && ref($self) ) {
+
+    my %cmdline_args = $self->args;
+    if ( exists( $cmdline_args{$getopts_name} ) ) {
+
+      my $answer = $cmdline_args{$getopts_name} || '';
+      print $args{prompt} . $space->($args{prompt}) . "$answer\n";
+
+      $answer = $proper_case_of{$abbrev_of{lc $answer}}
+          if exists($abbrev_of{lc $answer});
+
+      my $is_valid = $on_validate->(\$answer);
+      if ( $is_valid ) {
+        return $answer;
+      } elsif ( defined( $is_valid ) ) {
+        # defined, but false return: do not continue other checks
+      } elsif ( @options ) {
+        if ( exists($abbrev_of{lc $answer}) || $answer eq $default ) {
+          return $answer;
+        } else {
+          warn "Invalid option '$getopts_name=$answer'\n\n";
+        }
+      } else {
+        return $answer;
+      }
+    }
+  }
+
+  # Get answer
+  my $answer;
+  my $needs_answer = 1;
+  while ( $needs_answer ) {
+    print $prompt;
+    $answer = $self->_readline();
+
+    if ( !defined($answer) || !length($answer) ) { # Ctrl-D || Default
+      print "$default\n";
+      $answer = $default;
+      $needs_answer = 0;
+
+    } else {
+      $answer = $proper_case_of{$abbrev_of{lc $answer}}
+          if exists($abbrev_of{lc $answer});
+
+      my $is_valid = $on_validate->(\$answer);
+      if ( $is_valid ) {
+        $needs_answer = 0;
+      } elsif ( defined( $is_valid ) ) {
+        # defined, but false return: do not continue other checks
+      } elsif ( @options ) {
+        if ( exists($abbrev_of{lc $answer}) || $answer eq $default ) {
+          $needs_answer = 0;
+        }
+      } else {
+        $needs_answer = 0;
+      }
+    }
+  }
+
+  return $answer;
 }
 
 sub current_action { shift->{action} }
